<resources>
    <string name="app_name">FWG QR scanner</string>
    <string name="error_undefined">undefined</string>
    <string name="error_header">Ein Fehler ist aufgetreten…</string>
    <string name="error_send">Fehlermeldung wurde gesendet! Vielen Dank für die Mitarbeit. Die App wird nun neugestartet!</string>
    <string name="msg_navigation_drawer_open">Open Navigation Drawer</string>
    <string name="msg_navigation_drawer_close">Close Navigation Drawer</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="hello_world">Hello World!</string>
    <string name="item_start_title">Welcome</string>
    <string name="item_scan_title">Einscannen</string>
    <string name="item_history_title">Verlauf</string>
    <string name="item_help_title">Anleitung</string>
    <string name="item_information_title">Information</string>
    <string name="item_about_title">Über uns</string>
    <string name="item_agb_title">AGB</string>
    <string name="item_map">Karte</string>
    <string name="item_frgm_escape_routes">Fluchtwege</string>
    <string name="title_settings">Einstellungen</string>
    <string name="title_activity_start">Einführung</string>
    <string name="title_scanned">Eingescannt</string>
    <string name="welcome_start">Willkommen zum FWG QR Scanner</string>
    <string name="quick_guide">Quick Guide</string>
    <string name="agb">Allgemeine Geschäftsbedingungen</string>
    <string name="title_activity_fullscreen_video_playback">Video Player</string>
    <string name="title_activty_error">Fehler</string>
    <string name="next">Weiter</string>
    <string name="previous">Zurück</string>
    <string name="agb_accept">AGB Akzeptieren</string>
    <string name="agb_decline">AGB Ablehnen</string>
    <string name="start_using">Jetzt starten</string>
    <string name="button_error_report">Fehlermeldung senden</string>
    <string name="button_error_close_app">App schließen</string>
    <string name="first_floor">1. Stockwerk</string>
    <string name="second_floor">2. Stockwerk</string>
    <string name="third_floor">3. Stockwerk</string>
    <string name="mode_info">Info</string>
    <string name="mode_rallye">Rallye</string>
    <string name="mode">Modus</string>
    <string name="pref_category_general">Allgemein</string>
    <string name="pref_category_quality">Qualität</string>
    <string name="image_quality">Bild-Qualität</string>
    <string name="image_quality_orig">Original (6000x4000px)</string>
    <string name="image_quality_high">Hoch (1920x1080px)</string>
    <string name="image_quality_low">Niedrig (640x360px)</string>
    <string name="welcome_message">Der FWG QR Scanner ist eine App, mit der Sie Informationen zu wichtigen Orten im Frankenwald-Gymnasiums Kronach mit Hilfe eines QR Codes, welcher an den Orten selbst auffindbar ist, abrufen können. Die Entwicklung erfolgt in Form eines Open-Source-Projektes, sodass Sie jederzeit den Quellcode der App auf Github anschauen können.</string>
    <string name="dev_team">Entwicklerteam:\n Q11 Informatik Kurs des Frankenwald-Gymnasiums Kronach bestehend aus Maxim Balajan, Daniel Becker, Tobias Bittner, Dennis Eckert, Nico Fröba, Philipp Möckel, Niklas Schoberth, David Schuberth, und Ben Welsch</string>
    <string name="github_link">Github Link:\n<a href="https://github.com/tb1402/FWG_QR_scanner">https://github.com/tb1402/FWG_QR_scanner</a></string>
    <string name="video_quality">Video Qualität</string>
</resources>