<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background"
    tools:background="@color/background"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <!--ToDo Add items-->
        <item
            android:id="@+id/item_frgm_scan"
            android:orderInCategory="1"
            android:title="@string/item_scan_title" />
        <item
            android:id="@+id/item_frgm_history"
            android:orderInCategory="15"
            android:title="@string/item_history_title" />
        <item
            android:id="@+id/item_frgm_help"
            android:orderInCategory="20"
            android:title="@string/item_help_title" />
        <item
            android:id="@+id/item_frgm_about"
            android:orderInCategory="25"
            android:title="@string/item_about_title" />
        <item
            android:id="@+id/item_frgm_information"
            android:orderInCategory="30"
            android:title="@string/item_information_title" />
        <item
            android:id="@+id/item_frgm_agb"
            android:orderInCategory="35"
            android:title="@string/item_agb_title" />
    </group>
</menu>