<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/background"
    tools:showIn="@layout/activity_error_handling"
    android:layout_marginTop="56dp">

    <TextView
        android:id="@+id/tv_error_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/error_header"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center">

        <Button
            android:id="@+id/but_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_error_close_app"/>

        <Button
            android:id="@+id/but_report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_error_report"/>
    </TableRow>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_error_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF" />
    </ScrollView>

</LinearLayout>