<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:background="@color/background"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".fragmentAGB">

    <TextView
        android:id="@+id/textViewAGBTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="8dp"
        android:text="@string/agb"
        android:textColor="@color/textColor"
        android:textSize="24sp"
        android:textStyle="bold" />

    <WebView
        android:id="@+id/wv_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="9.6" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="16dp" />

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.2">

        <Button
            android:id="@+id/btnAccept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/buttonColor"
            android:padding="5dp"
            android:text="@string/agb_accept"
            android:textColor="@color/textColor" />

        <Space
            android:layout_width="32dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnDecline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/buttonColor"
            android:padding="5dp"
            android:text="@string/agb_decline"
            android:textColor="@color/textColor" />
    </TableRow>

</LinearLayout>